fix editconfig modal overflow not being contained in modal window

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -244,4 +244,9 @@ table tbody tr td label {
   font-size: 18px;
 }
 
-#config_editor
+#config_editor {
+}
+
+#payload {
+  width: 100%;
+}
